<resources>
    <string name="app_name">Pro-Rob Intranet</string>
    
    <!-- menu main-->
    <string name="action_settings">Settings</string>
    <string name="action_test">DB test</string>
    <string name="action_test1">Get From ExtDB</string>
    <string name="action_test2">Insert To ExtDB</string>
    <string name="action_test3">Delete From ExtDB</string>
    <string name="action_test4">Check deleted in ExtDB</string>
    <string name="action_test5">Check updates</string>

    <!-- menu working time fragment -->
    <string name="action_sync">Synchrozniuj</string>
    <string name="action_get_objectives">Aktualizuj listę celów</string>

    <!-- menu team fragment -->
    <string name="action_get_team">Aktualizuj listę pracowników</string>

    <!-- content_main -->
    <string name="textViewLoginUser">Login</string>
    <string name="textViewPasswordUser">Hasło</string>
    <string name="buttonLogIn">Zaloguj</string>

    <!-- toast -->
    <string name="toast_error_retrofit_msg">Serwer nie odpowiada, sprawdź połączenie internetowe i spróbuj ponownie</string>
    <string name="toast_error_add_to_loc_db">Dodawanie wpisu zakończone niepowodzeniem</string>

    <!-- menu drawer -->
    <string name="menu_home">Strona główna</string>
    <string name="menu_working_time">Czas pracy</string>
    <string name="menu_delegations">Delegacje</string>
    <string name="menu_holidays">Urlopy</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="menu_team">Załoga</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- closing dialog -->
    <string name="closing_app_msg">Czy chcesz zamknąć aplikację</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>

    <!-- double tsr dialog -->
    <string name="double_tsr_msg">Wpis w tym dniu już istnieje. Czy chcesz dodać kolejny?</string>

    <!-- timesheet item menu -->
    <string name="timesheet_item_action_remove">Usuń</string>
    <string name="timesheet_item_action_edit">Edycja</string>

    <!-- example texts -->
    <string name="example_text_ids">Id:10 IdExt:11 User:12</string>
    <string name="example_text_timestamp">2019–10–22 21:01:15.417645</string>
    <string name="example_text_date1">2019–10–14</string>
    <string name="example_text_hour1">08:00:00</string>
    <string name="example_text_hour2">17:00:00</string>
    <string name="example_text_project">Opel Zaragoza, Corsa</string>
    <string name="example_text_hour3">00:15</string>
    <string name="example_text_comment">Comment</string>

    <!-- user item-->
    <string name="imageView_user_content_descriptor" />
    <string name="example_text_full_name">Imie i Nazwisko</string>
    <string name="example_text_title">Tytuł, stanowisko itp</string>
    <string name="example_text_phone">0 800 666 666</string>
    <string name="example_text_email">blebleble@bleble.com</string>

    <string-array name="spinner_filter_month">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesień</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </string-array>


</resources>
