<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageViewUserItem"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imageView_user_content_descriptor"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/missing" />

    <TextView
        android:id="@+id/textViewUserItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/example_text_full_name"
        app:layout_constraintStart_toEndOf="@id/imageViewUserItem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUserItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/example_text_title"
        app:layout_constraintStart_toEndOf="@id/imageViewUserItem"
        app:layout_constraintTop_toBottomOf="@id/textViewUserItemName" />

    <TextView
        android:id="@+id/textViewUserItemPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/example_text_phone"
        app:layout_constraintStart_toEndOf="@id/imageViewUserItem"
        app:layout_constraintTop_toBottomOf="@id/textViewUserItemTitle" />

    <TextView
        android:id="@+id/textViewUserItemEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/example_text_email"
        app:layout_constraintStart_toEndOf="@id/imageViewUserItem"
        app:layout_constraintTop_toBottomOf="@id/textViewUserItemPhone" />

</android.support.constraint.ConstraintLayout>